manifests/workloads/dexidp/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: dex
  name: dex
