manifests/workloads/dexidp/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dex-danmanners-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: dex.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
  labels:
    app.kubernetes.io/name: dex
    app.kubernetes.io/instance: dex
spec:
  type: ExternalName
  externalName: kube.danmanners.com
  sessionAffinity: None
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dex-danmanners-cert-web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dex.danmanners.com`)
      kind: Rule
      services:
        - name: dex
          port: 5556
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dex-danmanners-cert-websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dex.danmanners.com`)
      kind: Rule
      services:
        - name: dex
          port: 5556
  tls:
    secretName: dex-danmanners-cert
